# CppFiles

./: .gitignore  CMakeLists.txt
A&DS/SegTree/: PermutationOnSeg.cpp  RMQ.cpp  mass-operations.cpp
A&DS/Strings/: Axo-Corasic.cpp  Period.cpp  Substrings_equals.cpp  SufMass_Cnt_Diff_Substrings.cpp  SufMass_kth_cycle_shift.cpp  Z_function.cpp
A&DS/dfs_mst/: C_articulation_points.cpp  F_condensation.cpp  G_2SAT.cpp  H_avia.cpp
A&DS/shortestPaths_gamesTheory/: A_Floyd.cpp  B_Deikstra.cpp  I_retroanalyz.cpp  J_Grandy_function.cpp  K_drovosek.cpp
A&DS/treap/: treap-kth-max.cpp
ALGORITHMS/SegTree/: Fenwick.cpp  RMQ_reverse.cpp  SegTree_2D.cpp
ALGORITHMS/Strings/: All_Meetings_Substring.cpp  Axo-Corasic_first_last_meet.cpp  Maximum_common_substring.cpp  Prefix_function.cpp  SufMass.cpp  SufMass_Multiple_Search.cpp  SufMass_common_substring_2_strings.cpp
ALGORITHMS/dfs_mst/: A.top_sort.cpp  B_bridges.cpp  D_edge_connectivity.cpp  E_point_connectivity.cpp  I_MST_PRIM.cpp  J_MST_Kraskal.cpp
ALGORITHMS/lca/: min-cost-lca.cpp  simple-lca.cpp
ALGORITHMS/parsoch/: birthday.cpp  domino.cpp  dragons.cpp  max_parsoch.cpp  nlo.cpp  parsoch.cpp  segments.cpp
ALGORITHMS/shortestPaths_gamesTheory/: C_NegCycle.cpp  D_K_length_paths.cpp  E_Ford_Bellman.cpp  F_lost_kefir.cpp  H_easy_game.cpp
ALGORITHMS/sparse-table/: simple-sparse-table.cpp
ALGORITHMS/treap/: Swapper.cpp  treap-reverse.cpp
CppCourse/: input.txt  substring.cpp
DMlabs/: Test2.cpp  input1.txt  input2.txt  input3.txt  input4.txt  output.txt
DMlabs/1sem/: Test2.cpp  Test3.cpp  dm_lab_avt.cpp
DMlabs/2sem/: A_gamil_cycle.cpp  B_gamil_cycle2.cpp  C_interactive.cpp  D_tournir_gamil_cycle.cpp  E_prufer_code.cpp  F_repair_tree_using_prufer_code.cpp
DMlabs/3sem/: test_graphs.cpp
DMlabs/3sem/Matroids/: A.cpp  B.cpp  C.cpp  D.cpp  E.cpp  F.cpp
ITMO_ICPC/IntroContest/: A.cpp  B.cpp  D.cpp  F.cpp  G.cpp  I.cpp
LOSH2021/: heavy-light decomposition.cpp  suff-mas.cpp
Yandex trainings 3.0/: Beautiful_String.cpp  ContestBackend_A.cpp  ContestBackend_B.cpp  ContestBackend_C.cpp  ContestBackend_D.cpp  ContestBackend_stupid_solve.cpp
evm/: cache.cpp  description.txt  easy.cpp
